config i18n language package

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "formidable": "^3.5.0",
+    "i18next": "^23.7.16",
     "jsonwebtoken": "^9.0.1",
     "multiparty": "^4.2.3",
     "next": "13.5.3",
@@ -22,6 +23,7 @@
     "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.0.0",
     "react-text-typing": "^0.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.3.1"
