--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "i18next": "^23.7.16",
     "jsonwebtoken": "^9.0.1",
     "multiparty": "^4.2.3",
-    "next": "13.5.3",
+    "next": "^13.5.6",
     "next-swagger-doc": "^0.4.0",
     "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
