--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/x-charts": "^6.19.1",
     "axios": "^1.4.0",
+    "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.1.0",
