--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/x-charts": "^6.19.1",
+    "@types/body-parser": "^1.19.5",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "date-fns": "^2.30.0",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
