finished img input in admin modal and its connectet to firebase storage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@/*": ["./*"]
+    },
   },
+
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "share/components/ordersChart/index.tsx"],
   "exclude": ["node_modules"]
 }
