--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-toastify": "^10.0.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.3.1",
+    "swal": "^0.1.0",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
