add aos and fix some bugs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     },
   },
 
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "share/components/ordersChart/index.tsx", "share/services/provider.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "share/components/ordersChart/index.tsx", "share/services/provider.js", "pages/_app.jsx"],
   "exclude": ["node_modules"]
 }
