--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/x-charts": "^6.19.1",
     "@types/body-parser": "^1.19.5",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.0",
